--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,7 @@ const { title, desc, ogimage = "/opengraph.jpg" } = Astro.props;
 
 const resolvedOGImage = checkImageUrl(ogimage, Astro.site);
 
-const makeTitle = title
-  ? title + " | " + "Stablo"
-  : "Stablo — Free Blog Website Template built with Astro & MDX";
+const makeTitle = title ? title + " | " + "SEC" : "Student English Club";
 ---
 
 <!DOCTYPE html>
@@ -27,12 +25,11 @@ const makeTitle = title
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <SEO
       title={makeTitle}
-      description={desc ||
-        "Stablo is a Blog Starter Template built with Astro & MDX."}
+      description={desc || "Unoffical website of Student English Club"}
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
@@ -43,7 +40,7 @@ const makeTitle = title
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Stablo - Blog Starter Template for Astro`,
+          title: `Student English Club`,
           image: resolvedOGImage,
         },
         image: {
