--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,7 +11,7 @@ import Themeswitch from "./themeswitch.astro";
     <div
       class="flex justify-center gap-1 mt-1 text-sm text-center text-gray-500 dark:text-gray-600">
       <span>
-        Made by {"hungpham"}
+        𝑆ℎ𝑎𝑟𝑒 𝑡𝑜 𝑏𝑒 𝑆ℎ𝑎𝑟𝑒𝑑 - 𝑊𝑖𝑡ℎ 𝐸𝑛𝑔𝑙𝑖𝑠ℎ, 𝑤𝑒 𝑎𝑟𝑒 𝑜𝑛𝑒!
         <!-- <a
           href="https://web3templates.com/?ref=stablo-astro"
           rel="noopener"
