--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -19,10 +19,6 @@ const leftmenu: Menu[] = [
     label: "About",
     href: "/about",
   },
-  {
-    label: "Contact",
-    href: "/contact",
-  },
 ];
 
 const rightmenu: Menu[] = [
@@ -31,16 +27,20 @@ const rightmenu: Menu[] = [
     href: "/archive",
   },
   {
-    label: "Github",
-    href: "https://github.com/web3templates/stablo-astro",
-    external: true,
-    badge: "new",
+    label: "Contact",
+    href: "/contact",
   },
-  {
-    label: "Download",
-    href: "https://web3templates.com/templates/stablo-minimal-blog-website-template",
-    external: true,
-  },
+  // {
+  //   label: "Github",
+  //   href: "https://github.com/web3templates/stablo-astro",
+  //    external: true,
+  //    badge: "new",
+  //  },
+  //  {
+  //    label: "Download",
+  //    href: "https://web3templates.com/templates/stablo-minimal-blog-website-template",
+  //    external: true,
+  //  },
 ];
 
 const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
