--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,33 +10,36 @@ import Pagetitle from "@components/pagetitle.astro";
   <Container>
     <Pagetitle>
       <Fragment slot="title">Contact</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="desc">Thông tin liên hệ với CLB.</Fragment>
     </Pagetitle>
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
         <h2 class="font-medium text-2xl text-gray-800 dark:text-gray-200">
-          Contact Stablo
+          Contact Student English Club
         </h2>
         <p
           class="text-lg leading-relaxed text-gray-500 dark:text-gray-400 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Bạn muốn liên hệ với chúng mình? Hãy để lại thông tin, gửi email hoặc
+          gọi vào số điện thoại bên dưới nhé.
         </p>
         <div class="mt-5">
           <div
             class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
             <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
+            <a
+              href="https://www.google.com/mymaps/viewer?mid=1BKTyKOLMxeUkEHwZ1KhV2HwWs6Q&hl=en_US"
+              >B10 Tạ Quang Bửu Bách Khoa, Hanoi, Vietnam</a
+            >
           </div><div
             class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@stablotemplate.com">hello@stablotemplate.com</a
+              href="mailto:secclub.2511@gmail.com">secclub.2511@gmail.com</a
             >
           </div><div
             class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-300">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+              href="tel:+84 985085648">+84 985085648</a
             >
           </div>
         </div>
