--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -27,7 +27,9 @@ const { post } = Astro.props;
 
 const { Content, remarkPluginFrontmatter } = await post.render();
 
-const author = authors.find((item) => item.slug === post.data.author) as Author;
+const current_authors = authors.filter((item) =>
+  post.data.authors.includes(item.slug)
+) as Author[];
 const category = categories.find(
   (item) => item.slug === post.data.category
 ) as Category;
@@ -50,24 +52,27 @@ const category = categories.find(
 
       <div class="flex justify-center mt-3 space-x-3 text-gray-500">
         <div class="flex items-center gap-3">
-          <div class="relative flex-shrink-0 w-10 h-10">
+          <div class="relative flex gap-2">
             {
-              author.image && (
-                <Image
-                  src={author.image}
-                  alt="Author Photo"
-                  width={80}
-                  height={80}
-                  loading="eager"
-                  class="rounded-full"
-                />
+              current_authors.map(
+                (author) =>
+                  author.image && (
+                    <Image
+                      src={author.image}
+                      alt="Author Photo"
+                      width={80}
+                      height={80}
+                      loading="eager"
+                      class="rounded-full w-10 h-10"
+                    />
+                  )
               )
             }
           </div>
 
           <div>
             <p class="text-gray-800 dark:text-gray-400">
-              {author.name}
+              {current_authors.map((author) => author.name).join(", ")}
             </p>
             <div class="flex items-center space-x-2 text-sm">
               <time
@@ -127,7 +132,11 @@ const category = categories.find(
           ← View all posts
         </a>
       </div>
-      {author && <Authorcard author={author} />}
+      {
+        current_authors.map(
+          (author) => author && <Authorcard author={author} />
+        )
+      }
     </article>
   </Container>
 </Layout>
