--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -12,22 +12,22 @@ interface Menu {
 }
 const leftmenu: Menu[] = [
   {
-    label: "Home",
+    label: "Nhà",
     href: "/",
   },
   {
-    label: "About",
+    label: "Về chúng tớ",
     href: "/about",
   },
 ];
 
 const rightmenu: Menu[] = [
   {
-    label: "Archive",
+    label: "Lưu trữ",
     href: "/archive",
   },
   {
-    label: "Contact",
+    label: "Liên hệ",
     href: "/contact",
   },
   // {
