--- a/src/components/humanassign.astro
+++ b/src/components/humanassign.astro
@@ -2,20 +2,30 @@
 import SearchableDropdown from "./SearchableDropdown";
 
 const boy_str = `
-Hung Pham
-Quoc Lap
-Wang Sang
-Hoang Dieu
-Thanh Long
-HQV
-Huy Hoang
+Giang
+Hậu
+Sáng
+Hải Hà
+Di
+Huy
+Cường
+Trọng Minh
+Uy
+Đạt
+Thắng
+Thành
+Hoàng
+Quang Anh
+Lập
+Hưng
 `;
 const girl_str = `
-Nguyen Thi Thuy
-Nguyen Thi Thanh
-Vu Thi Hang
-Nguyen Kim Tuyen
-Kim Hanh
+Phương Linh
+Bình An
+Tuyền
+Hằng
+Ánh
+Huyền
 `;
 
 function shuffle(array, seed) {
