--- a/src/components/themeswitch.astro
+++ b/src/components/themeswitch.astro
@@ -7,9 +7,9 @@ import { ThemeSwitch } from "astro-color-scheme";
   <div class="inline-flex items-center">
     <Icon class="w-4 h-4 mr-2" name="heroicons-outline:sun" />
     <select name="themeSwitch" id="themeSwitch">
-      <!-- <option value="system">System</option>
-      <option value="dark">Dark</option> -->
-      <option value="light">Light</option>
+      <option value="light" selected>Light</option>
+      <option value="system">System</option>
+      <option value="dark">Dark</option>
     </select>
   </div>
 </ThemeSwitch>
