--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,6 +57,8 @@ const makeTitle = title ? title + " | " + "SEC" : "Student English Club";
 
   <body>
     <Navbar />
+    <script id="dsq-count-scr" src="//sec-io-vn.disqus.com/count.js" async
+    ></script>
     <slot />
     <Footer />
     <style is:global>
