--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -140,7 +140,7 @@ const category = categories.find(
         )
       }
     </article>
-    <div id="disqus_thread"></div>
+    <div class="mt-8" id="disqus_thread"></div>
     <script>
       /**
        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
