--- a/src/components/humanassign.astro
+++ b/src/components/humanassign.astro
@@ -2,16 +2,50 @@
 import SearchableDropdown from "./SearchableDropdown";
 
 const boy_str = `
-Giang
-Hậu
-Sáng
-Hải Hà
-Di
-Huy
+Hưng Phấn
+Nguyễn Hải Đăng
+Nguyễn Hồ Đắc Di
+Nguyễn Đức Giang Đẫm
+Nguyễn Vũ Thắng
+Đinh Việt Cường
+Nguyễn Quang Anh
+Vũ Xuân Uy
+Trịnh Xuân Hòa
+Nguyễn Hải Hà
+Trần Dương Chính
+Bùi Quang Huy
+Chần Quốc Lập
+Nguyễn Như Quang
+Lê Quốc Việt
+Phạm Quốc Tuấn
+Dong Minh Hoang
+Hoàng Gia Nam Anh
+Nguyễn Đỗ Trọng Đại
+Lưu Quốc Dũng
+Phan Chí Thành
+Bùi Trường Tộ
+Nguyễn Tiến Đạt
+Đào Gia Huy
+Nguyễn Đức vinh
+Vũ Quang Đăng
+Nguyen Viet Anh
+Vu The Tue
 `;
 const girl_str = `
-Ánh
-Huyền
+Phan Ngọc Ánh
+Nguyễn Kim Tuyền
+Trần Thanh Tâm
+Vũ Thị Hằng
+Nguyễn Thị Minh Diệu
+Đinh Thị Diệu Châu
+Nguyễn Phương Linh
+Trịnh Minh Huyền
+Bùi Thị Thanh Yến
+Nguyễn Bảo Linh
+Nguyễn Thùy Trang
+Dương Thị Thanh Trà
+Phan Thi Linh Nga
+La Thi Binh An
 `;
 
 function shuffle(array, seed) {
