--- a/src/components/humanassign.astro
+++ b/src/components/humanassign.astro
@@ -30,12 +30,12 @@ Nguyễn Đức vinh
 Vũ Quang Đăng
 Nguyen Viet Anh
 Vu The Tue
+Tran Viet Bach
+Nguyen Quang Hung
 `;
 const girl_str = `
-Phan Ngọc Ánh
-Nguyễn Kim Tuyền
+Phan Ngọc Ánhg
 Trần Thanh Tâm
-Vũ Thị Hằng
 Nguyễn Thị Minh Diệu
 Đinh Thị Diệu Châu
 Nguyễn Phương Linh
