--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -1,7 +1,7 @@
 ---
 import cx from "classnames";
 
-import { Image, Picture } from "@astrojs/image/components";
+import { Image, Picture} from "astro:assets";
 import Label from "@components/ui/label.astro";
 import type { Author } from "@data/authors";
 import { authors } from "@data/authors";
@@ -30,11 +30,13 @@ const category = categories.find(
         post.data.image ? (
           <Picture
             src={post.data.image}
-            widths={[200, 400, 800]}
-            sizes="(max-width: 640px) 90vw, 480px"
-            aspectRatio={aspect === "landscape" ? "16:9" : "1:1"}
-            alt="Thumbnail"
-            loading={preloadImage ? "eager" : "lazy"}
+            width={800}
+            height={800}
+            // widths={[200, 400, 800]}
+            // sizes="(max-width: 640px) 90vw, 480px"
+            // aspectRatio={aspect === "landscape" ? "16:9" : "1:1"}
+            // alt="Thumbnail"
+            // loading={preloadImage ? "eager" : "lazy"}
             class="w-full h-full rounded-md"
           />
         ) : (
