--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -9,6 +9,7 @@ import type { Category } from "@data/category";
 import { categories } from "@data/category";
 import { getFormattedDate } from "@utils/all";
 import { Icon } from "astro-icon";
+import { host } from "../utils/content";
 
 const { post, aspect, preloadImage } = Astro.props;
 const current_authors = authors.filter((item) =>
@@ -29,7 +30,11 @@ const category = categories.find(
       {
         post.data.image ? (
           <Picture
-            src={post.data.image}
+            src={
+              post.data.image.startsWith("src")
+                ? host + post.data.image
+                : post.data.image
+            }
             widths={[200, 400, 800]}
             sizes="(max-width: 640px) 90vw, 480px"
             aspectRatio={aspect === "landscape" ? "16:9" : "1:1"}
