--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -8,6 +8,7 @@ import { categories } from "@data/category";
 import Layout from "@layouts/Layout.astro";
 import { getFormattedDate } from "@utils/all";
 import { CollectionEntry, getCollection } from "astro:content";
+import { host } from "../../utils/content";
 
 import type { Author } from "@data/authors";
 import type { Category } from "@data/category";
@@ -97,7 +98,11 @@ const category = categories.find(
     {
       post.data.image && (
         <Picture
-          src={post.data.image}
+          src={
+            post.data.image.startsWith("src")
+              ? host + post.data.image
+              : post.data.image
+          }
           widths={[200, 400, 800]}
           sizes="(max-width: 640px) 90vw, 480px"
           aspectRatio="16:9"
