--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,16 +31,11 @@ const makeTitle = title ? title + " | " + "SEC" : "Student English Club";
       title={makeTitle}
       description={desc || "Unoffical website of Student English Club"}
       canonical={canonicalURL}
-      twitter={{
-        creator: "@surjithctly",
-        site: "@web3templates",
-        card: "summary_large_image",
-      }}
       openGraph={{
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Student English Club`,
+          title: `SEC`,
           image: resolvedOGImage,
         },
         image: {
